# python-project-template

./: .readthedocs.yaml  ABOUT_THIS_TEMPLATE.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.py  testRST.rst
docs/source/: conf.py  getting_started.rst  index.rst
package_name/: __main__.py  base.py  cli.py  script_header_template.py
tutorials/: tutorial_1_creating_python_project_from_template.ipynb  tutorial_1_getting_started.ipynb  tutorial_2_rst_basics_and_exercises.ipynb  tutorial_2_rst_basics_exercises.ipynb  tutorial_2_setting_up_development_environment.ipynb  tutorial_3_creating_documentation_with_phinx.ipynb  tutorial_3_creating_documentation_with_sphinx.ipynb  tutorial_3_docstring_exercies.ipynb  tutorial_3_docstring_in_rst_and_exercises.ipynb  tutorial_3_rst_exercises.ipynb  tutorial_4_creating new documentation with Sphinx.ipynb  tutorial_4_documenting_source_code.ipynb  tutorial_5_documenting_python_projecct_with_sphinx.ipynb  tutorial_5_hosting_your_documentation.ipynb
